package yas.proto;

message ServerStatusQuery {
}


message ServerStatusAnswer {
	required int32 version = 1;
	required int32 childCount = 2;
	repeated string messageProcessors = 3;
}
