package yas.proto;

message StubQuery {
}

message StubAnswer {
	optional string comment = 1;
}
